# ot_harjoitustyo

./: .gitignore  README.md
Documents/: README.md  arkkitehtuuri.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
harkkatyo/Documents/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: _home_juhanaka__cache_pypoetry_virtualenvs_maksukortti-XXUeExJR-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_juhanaka__cache_pypoetry_virtualenvs_maksukortti-XXUeExJR-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_juhanaka__cache_pypoetry_virtualenvs_maksukortti-XXUeExJR-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_juhanaka__cache_pypoetry_virtualenvs_maksukortti-XXUeExJR-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  (+97 more)
laskarit/viikko2/unicafe/: .gitignore  pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
poetry-testi/: pyproject.toml
poetry-testi/src/: index.py
src/: .coveragerc  .pylintrc  Bullet.py  Door.py  Enemy.py  Game.py  Player.py  SETTINGS.py  Tile.py  World.py  enemy.py  game.py  main.py  player.py  pyproject.toml  requirements.txt  score.txt  spritesheet.py  tasks.py  world.py
src/data/: SETTINGS.py  enemy.py  game.py  lemminki.py  map.py  player.py  points.py  settings.py  world.py
src/data/assets/: lemminki.py  map.py  world.py
src/tests/: game_test.py  map_test.py  player_test.py  points_test.py  world_test.py
(+3 files in other folders)
